<resources>
    <string name="app_name">屏幕刷新率</string>
    <string name="usage">1. 显示与亮度 - 更多 - 屏幕刷新率，选智能切换\n2. 点击 `设置 90Hz` 按钮\n设置一次如果无效请从第 1 步重新做</string>
    <string name="info">\@SatySatsZB 开发\n酷安 @情诗和你 修改\n\nAPP 也提供了一个快捷磁贴来设定刷新率</string>
    <string name="set_120hz">设置 120Hz</string>
    <string name="set_96hz">设置 96Hz</string>
    <string name="set_90hz">设置 90Hz</string>
    <string name="go_setting">显示与亮度</string>
    <string name="go_dev">开发者选项</string>
    <string name="text_boot">开机自启</string>
    <string name="preference_file_key">settings</string>
    <string name="settings_boot">settings_boot</string>
</resources>
